[bug] possible solution to issues with modals not showing
https://www.i-dont-care-about-cookies.eu/ is injecting CSS: .cc-modal, .modal-shown.d-block { display: none !important} which affects all other modals

--- a/assets/glass.scss
+++ b/assets/glass.scss
@@ -11,7 +11,7 @@
         }
     }
 
-    .modal {
+    .modal, .cc-modal-bg {
         backdrop-filter: blur($glassBlur);
         background-color: rgba($black, .2) !important;
     }
